--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <header>
             <nav>
-                <h3>
+                <h3 class="index">
                 <a href="recetas.html">Recetario de cocteleria</a>
                
                 <a href="alcoholes.html">Tipos de alcoholes</a>
