--- a/alcoholes.html
+++ b/alcoholes.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="alcoholes.css">
 </head>
 <body>
     
 
-    <h1>hola</h1>
+    <h1 class="alcoholes">hola</h1>
 </body>
 </html>
